# organator

./: .gitignore  README.md  organator.code-workspace
.github/workflows/: nextjs.yml
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/public/jswasm/: sqlite3.js  sqlite3.wasm
frontend/src/: config.js
frontend/src/app/: Main.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/(main)/: DownloadDb.tsx  Main.tsx  layout.tsx  page.tsx
frontend/src/app/(main)/browse/: Item.tsx  ItemLoader.tsx  config.ts  page.tsx
frontend/src/app/(main)/downloads/: page.tsx
frontend/src/app/(main)/gene/: page.tsx
frontend/src/app/gene/: page.tsx
frontend/src/components/: VirtualList.css  VirtualList.tsx
frontend/src/components/ui/: typography.tsx
frontend/src/hooks/: useAsyncEffect.ts  useContainerDimensions.ts  useDataHook.ts  useDb.ts  useDebounce.ts  useIndexedDb.ts  useQuery.ts  useQueryCached.ts  useScrollLeft.ts  useSqlite3.ts
frontend/src/lib/: browserConfig.ts
frontend/src/stores/: BrowserStore.tsx  DbStore.tsx
notebooks/: create-db.ipynb  pyproject.toml
