[tool.black]
line-length = 100

[tool.poetry]
name = "organator-notebooks"
version = "0.1.0"
description = ""
authors = ["Zachary King <zaking17@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
black = "^24.4.1"
python = "^3.12"
gffutils = "^0.13"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
